--- a/src/www/style.css
+++ b/src/www/style.css
@@ -40,3 +40,17 @@ input:-webkit-autofill {
     font-weight: normal;
     margin: 50px 0;
 }
+
+h1#question {
+    padding: 0 10px;
+    text-align: center;
+}
+
+div#layoutWrapper {
+    max-width: 414px;
+    margin: 0 auto;
+}
+
+div#waitingForOpponent {
+    text-align: center;
+}
