--- a/src/www/index.ejs
+++ b/src/www/index.ejs
@@ -4,6 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=0, maximum-scale=1, minimum-scale=1">
         <title>ridd.li</title>
+        <script></script>
     </head>
     <body>
         <div id="riddliApp"></div>
